--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,32 +1,25 @@
-<p>login works!</p>
 
-<div class="container">
-  <h2>Login</h2>
-  <div class="login-container">
-    <div class="login-box p-shadow-6">
-      <h2>Login</h2>
-      <form (ngSubmit)="onSubmit()">
-        <div class="p-inputgroup">
-          <span class="p-inputgroup-addon">
-            <i class="pi pi-user"></i>
-          </span>
-          <input type="text" id="username" name="username" [(ngModel)]="user.username" pInputText required>
-        </div>
-  
-        <div class="p-inputgroup">
-          <span class="p-inputgroup-addon">
-            <i class="pi pi-lock"></i>
-          </span>
-          <input type="password" id="password" name="password" [(ngModel)]="user.password" pPassword required>
-        </div>
-  
-        <div class="form-group">
-          <button type="submit" pButton label="Login" class="p-button-success"></button>
-        </div>
-      </form>
-  
-      <div class="additional-info">
-        <p>Don't have an account? <a (click)="navigateToRegister()">Register here</a>.</p>
+<div class="login-container">
+  <div class="login-box p-shadow-6">
+    <h2 class="p-text-center p-mb-4">Login</h2>
+    <form (ngSubmit)="onSubmit()" class="p-fluid">
+      
+      <div class="p-field">
+      
+        <label for="email">Correo</label>
+        <input type="email" id="email" name="email" pPassword placeholder="Email" [(ngModel)]="user.email" required>
       </div>
+      <div class="p-field">
+      
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" name="password" pPassword placeholder="Password" [(ngModel)]="user.password" required>
+      </div>
+
+      <div class="card flex justify-content-center">
+        <p-button label="Submit"></p-button>
     </div>
+    </form>
+
+    <p class="p-text-center p-mt-3">Don't have an account? <a (click)="navigateToRegister()">Register here</a>.</p>
   </div>
+</div>
